Finalizando versão desktop do Site Demolidora Classe A, últimas edições foram botão de volta ao topo

--- a/index.html
+++ b/index.html
@@ -184,6 +184,24 @@
     </div>
 </footer>
 
+<!-- Cookie Popup -->
+<div class="cookie-popup" id="cookiePopup">
+    <div class="cookie-content">
+        <p>Este site utiliza cookies terceiros para sua melhor navegação. Fique tranquilo, seus dados estão seguros.</p>
+        <div class="cookie-buttons">
+            <button class="cookie-btn" id="acceptCookies">Aceitar</button>
+            <button class="cookie-btn" id="rejectCookies">Recusar</button>
+        </div>
+    </div>
+</div>
+
+<!-- Botão Voltar ao Topo -->
+<a href="#inicio" class="back-to-top" id="backToTop">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="white" width="30px" height="30px">
+        <path d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z"/>
+    </svg>
+</a>
+
     <!-- Botão do WhatsApp -->
 <a href="https://api.whatsapp.com/send?phone=5511910824777" class="whatsapp-float" target="_blank">
     <img src="https://cdn-icons-png.flaticon.com/512/3670/3670051.png" alt="WhatsApp" class="whatsapp-icon">
