Adicionando responsividade em todo site

--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" 
-    author="Felipe Gomes" 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" author="Felipe Gomes" 
     description="Serviços de Demolição em geral: Terraplanagem, Desmonte de Estruturas, Locação de Máquinas e Venda de Produtos." 
     keywords="Demolição em geral, Terraplanagem, Desmonte de Estruturas, Locação de Máquinas, Venda de Produtos">
 
