Atualização das últimas configurações do modo desktop do site

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
                 <ul>
                     <li>
-                        <img src="/img/desmonte.png" alt="Ícone de Estrtura de um galpão sendo desmontado" width="90px">
+                        <img src="/img/desmonte.png" alt="Ícone de Estrutura de um galpão sendo desmontado" width="90px">
                         <h3>Desmonte de Estruturas</h3>
                         <p>O desmonte de estruturas tem que ser feito de maneira cautelosa, principalmente para evitar risco de queda de material descarregado sobre transeuntes, funcionários ou equipamentos. Para isso a Demolidora Classe A possui uma equipe altamente capacitada.</p>
                     </li>
